[package]
name = "kirimaja"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework (egui via eframe)
eframe = "0.27"

# HTTP client (blocking biar gampang dulu)
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Async runtime (belum dipakai sekarang, tapi disiapin aja)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional: logging (buat debugging nanti)
log = "0.4"
env_logger = "0.10"
